--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -85,18 +85,20 @@
         <div class="page-content">
           <div class="tabs">
             <div id="tab-1" class="tab active">
-              <div class="content-block-title"><a href="#" class="link icon-only app-cheers">ACTIVE WORKSPACE <i class="fa fa-info-circle fa-inline"></i></a></div>
+              <div class="content-block-title content-block-title-short">
+                <a href="#" class="link icon-only app-cheers">ACTIVE WORKSPACE <i class="fa fa-info-circle fa-inline"></i></a>
+              </div>
               <div class="list-block media-list">
                 <ul>
                   <li class="swipeout">
                     <div class="swipeout-content"><a href="#" class="item-link item-content">
                       <div class="item-inner">
                         <div class="item-title-row">
-                          <div class="item-title">Facebook</div>
-                          <div class="item-after">17:14</div>
+                          <div class="item-title">Apple</div>
+                          <div class="item-after">Vendor</div>
                         </div>
-                        <div class="item-subtitle">New messages from John Doe</div>
-                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                        <div class="item-subtitle">Cupertino, CA - 800-692-7753</div>
+                        <div class="item-text">1 Infinite Loop Cupertino, CA 95014 408.996.1010</div>
                       </div></a></div>
                     <div class="swipeout-actions">
                       <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
@@ -106,26 +108,29 @@
                     <div class="swipeout-content"><a href="#" class="item-link item-content">
                       <div class="item-inner">
                         <div class="item-title-row">
-                          <div class="item-title">John Doe (via Twitter)</div>
-                          <div class="item-after">17:11</div>
+                          <div class="item-title">Zachariah Montgomery Trucking</div>
+                          <div class="item-after">Customer</div>
                         </div>
-                        <div class="item-subtitle">John Doe (@_johndoe) mentioned you on Twitter!</div>
-                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                        <div class="item-subtitle">Zak - 678-555-1212</div>
+                        <div class="item-text">100 Main Street, Snellville, GA 30039, Attention Zak</div>
                       </div></a></div>
                     <div class="swipeout-actions">
                       <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
                     </div>
                   </li>
                   <li class="swipeout">
-                    <div class="swipeout-content"><a href="#" class="item-link item-content">
+                    <div class="swipeout-content">
+                      <a href="#" class="item-link item-content">
                       <div class="item-inner">
                         <div class="item-title-row">
-                          <div class="item-title">Facebook</div>
-                          <div class="item-after">16:48</div>
+                          <div class="item-title">Customer Invoice</div>
+                          <div class="item-after">123456</div>
                         </div>
-                        <div class="item-subtitle">New messages from John Doe</div>
-                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
-                      </div></a></div>
+                        <div class="item-subtitle">Zachariah Montgomery Trucking</div>
+                        <div class="item-text">25 Widgets, 45 Carbon Coated Thingamabobs, *** NOTE rush order fools</div>
+                      </div>
+                      </a>
+                    </div>
                     <div class="swipeout-actions">
                       <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a></div>
                     </div>
@@ -134,11 +139,11 @@
                     <div class="swipeout-content"><a href="#" class="item-link item-content">
                       <div class="item-inner">
                         <div class="item-title-row">
-                          <div class="item-title">John Doe (via Twitter)</div>
-                          <div class="item-after">15:32</div>
+                          <div class="item-title">CCT3.1415927</div>
+                          <div class="item-after">Product</div>
                         </div>
-                        <div class="item-subtitle">John Doe (@_johndoe) mentioned you on Twitter!</div>
-                        <div class="item-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis tellus ut turpis condimentum, ut dignissim lacus tincidunt. Cras dolor metus, ultrices condimentum sodales sit amet, pharetra sodales eros. Phasellus vel felis tellus. Mauris rutrum ligula nec dapibus feugiat. In vel dui laoreet, commodo augue id, pulvinar lacus.</div>
+                        <div class="item-subtitle">Carbon Coated Thingamabobs</div>
+                        <div class="item-text">On Hand 22, On Order 10, Supplier: Thingamabobs -r- Us</div>
                       </div></a></div>
                     <div class="swipeout-actions">
                       <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
