--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -84,10 +84,7 @@
         <!-- Scrollable page content -->
         <div class="page-content">
           <div class="tabs">
-            <div id="tab-1" class="tab active">
-              <div class="content-block-title content-block-title-short">
-                <a href="#" class="link icon-only app-cheers">ACTIVE WORKSPACE <i class="fa fa-info-circle fa-inline"></i></a>
-              </div>
+            <div id="tab-1" class="tab">
               <div class="list-block media-list">
                 <ul>
                   <li class="swipeout">
@@ -149,35 +146,46 @@
                       <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
                     </div>
                   </li>
+                  <li class="swipeout">
+                    <div class="swipeout-content"><a href="#" class="item-link item-content">
+                      <div class="item-inner">
+                        <div class="item-title-row">
+                          <div class="item-title">Tequila</div>
+                          <div class="item-after">Product</div>
+                        </div>
+                        <div class="item-subtitle">Agave Azul</div>
+                        <div class="item-text">Tequila is a distilled beverage made from the blue agave plant, primarily in the area surrounding the city of Tequila, 65 km northwest of Guadalajara, and in the highlands of the north western Mexican state of Jalisco.</div>
+                      </div></a></div>
+                    <div class="swipeout-actions">
+                      <div class="swipeout-actions-inner"><a href="#" class="demo-actions">More</a><a href="#" data-confirm="Are you sure you want to delete this item?" class="swipeout-delete">Delete</a></div>
+                    </div>
+                  </li>
                 </ul>
               </div>
-              <div class="content-block"><a href="#" class="button app-cheers">Show Recently Closed</a></div>
             </div>
-            <div id="tab-2" class="tab">
+            <div id="tab-2" class="tab active">
               <div class="content-block content-block-menu">
-                <!--<div class="content-block-inner">-->
-                  <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-clock-o fa-2x"></i><br>Wakey Wakey</a></div>
-                    <div class="col-33"><a href="#" class="button button-red button-round button-tall app-cheers"><i class="fa fa-coffee fa-2x"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
-                  </div>
-                  <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Antidistablishmentariianism</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>I code therefore I am!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Think before you jump I think!</a></div>
-                  </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Now is the time</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>For all good men</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>To help fight the man</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #af0000"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-clock-o fa-2x" style="color: #d7d739"></i><br>Wakey Wakey</a></div>
+                  <div class="col-33"><a href="#" class="button button-red button-round button-tall app-cheers"><i class="fa fa-coffee fa-2x" style="color: #ffffff"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
                 </div>
-                  <div class="row">
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Point being make up stuff to take up space and see what happens</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                    <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x"></i><br>Cheers Mate!</a></div>
-                  </div>
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Antidistablishmentariianism</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>I code therefore I am!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Think before you jump I think!</a></div>
                 </div>
-              <!--</div>-->
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Now is the time</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>For all good men</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>To help fight the man</a></div>
+                </div>
+                <div class="row">
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Point being make up stuff to take up space and see what happens</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Cheers Mate!</a></div>
+                </div>
+              </div>
             </div>
             <div id="tab-3" class="tab">
               <div data-page="searchbar" class="page">
@@ -514,7 +522,7 @@
       <div class="toolbar-inner">
         <!-- Toolbar links -->
         <a href="#tab-1" class="tab-link"><i class="fa fa-cloud fa-lg"></i><i class="icon fa-badge-fix"><span class="badge badge-green">27</span></i><span class="tabbar-label tabbar-label-fix2">Workspace</span></a>
-        <a href="#tab-2" class="tab-link active"><i class="fa fa-th fa-lg"></i><span class="tabbar-label tabbar-label-fix">Navigation</span></a>
+        <a href="#tab-2" class="tab-link active"><i class="fa fa-th fa-lg"></i><span class="tabbar-label tabbar-label-fix">App</span></a>
         <a href="#tab-3" class="tab-link"><i class="fa fa-search fa-lg"></i><span class="tabbar-label tabbar-label-fix">Search</span></a>
         <a href="#tab-4" class="tab-link"><i class="fa fa-bookmark fa-lg"></i><span class="tabbar-label tabbar-label-fix">Favorites</span></a>
         <a href="#tab-5" class="tab-link"><i class="fa fa-book fa-lg"></i><span class="tabbar-label tabbar-label-fix">History</span></a>
