--- a/samples/prototypes/tequila-interface-f7/index.html
+++ b/samples/prototypes/tequila-interface-f7/index.html
@@ -166,24 +166,24 @@
             <div id="tab-2" class="tab active">
               <div class="content-block content-block-menu">
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #af0000"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-clock-o fa-2x" style="color: #d7d739"></i><br>Wakey Wakey</a></div>
-                  <div class="col-33"><a href="#" class="button button-red button-round button-tall app-cheers"><i class="fa fa-coffee fa-2x" style="color: #ffffff"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2xx" style="color: #cccccc"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-clock-o fa-2xx" style="color: #001a35"></i><br>Wakey Wakey</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-coffee fa-2xx" style="color: #ffffff"></i><br>Eggs Sausage Rye Toast & Coffee Black</a></div>
                 </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Antidistablishmentariianism</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>I code therefore I am!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Think before you jump I think!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-cab fa-2xx" style="color: #feff16"></i><br>Cab Rideshare</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-github fa-2xx" style="color: #000000"></i><br>I code therefore I am!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-circle-o-notch fa-spin fa-2xx" style="color: #004444"></i><br>Think before you jump I think!</a></div>
                 </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Now is the time</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>For all good men</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>To help fight the man</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-file-audio-o fa-2xx" style="color: #15395e"></i><br>Now is the time</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-video-camera fa-2xx" style="color: #000000"></i><br>For all good men</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-ticket fa-2xx" style="color: #4be72f"></i><br>To help fight the man</a></div>
                 </div>
                 <div class="row">
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Point being make up stuff to take up space and see what happens</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Cheers Mate!</a></div>
-                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-beer fa-2x" style="color: #004444"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-truck fa-2xx" style="color: #535353"></i><br>Point being make up stuff to take up space and see what happens</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-suitcase fa-2xx" style="color: #de34ff"></i><br>Cheers Mate!</a></div>
+                  <div class="col-33"><a href="#" class="button button-round button-tall app-cheers"><i class="fa fa-meh-o fa-2xx" style="color: #ff0000"></i><br>Cheers Mate!</a></div>
                 </div>
               </div>
             </div>
