--- a/test-spec/test-runner.html
+++ b/test-spec/test-runner.html
@@ -43,6 +43,7 @@
   <script type="text/javascript" src="../lib/stores/local-store-client.js"></script>
   <script type="text/javascript" src="../lib/stores/redis-store.js"></script>
 
+  <script type="text/javascript" src="../lib/interfaces/framework7-interface.js"></script>
   <script type="text/javascript" src="../lib/interfaces/bootstrap3-panels-interface.js"></script>
   <script type="text/javascript" src="../lib/interfaces/command-line-interface.js"></script>
   <script type="text/javascript" src="../lib/interfaces/mock-interface.js"></script>
@@ -78,6 +79,7 @@
   <script type="text/javascript" src="../lib/stores/local-test.js"></script>
   <script type="text/javascript" src="../lib/stores/redis-test.js"></script>
 
+  <script type="text/javascript" src="../lib/interfaces/framework7-interface-test.js"></script>
   <script type="text/javascript" src="../lib/interfaces/bootstrap3-panels-test.js"></script>
   <script type="text/javascript" src="../lib/interfaces/command-line-test.js"></script>
   <script type="text/javascript" src="../lib/interfaces/mock-test.js"></script>
