--- a/samples/framework7-interface-sample/index.html
+++ b/samples/framework7-interface-sample/index.html
@@ -30,6 +30,9 @@
   <!--<script src="vendor/js/bowser.min.js"></script>-->
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/framework7-interface-client.js"></script>
+  <script src="../../lib/interfaces/framework7-interface-navbar.js"></script>
+  <script src="../../lib/interfaces/framework7-interface-page.js"></script>
+  <script src="../../lib/interfaces/framework7-interface-toolbar.js"></script>
   <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>-->
   <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-navbar.js"></script>-->
   <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-appbar.js"></script>-->
