--- a/samples/framework7-interface-sample/index.html
+++ b/samples/framework7-interface-sample/index.html
@@ -27,7 +27,7 @@
   <!--<script src="vendor/js/markdown.js"></script>-->
   <!--<script src="vendor/js/switchery.js"></script>-->
   <!--<script src="vendor/js/bootstrap-datepicker.min.js"></script>-->
-  <!--<script src="vendor/js/bowser.min.js"></script>-->
+  <script src="vendor/js/bowser.min.js"></script>
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/framework7-interface-client.js"></script>
   <script src="../../lib/interfaces/framework7-interface-navbar.js"></script>
