--- a/samples/bootstrap3-panels-interface-sample/index.html
+++ b/samples/bootstrap3-panels-interface-sample/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>bootstrap3-panels-interface-sample</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link href="vendor/css/bootstrap.css" rel="stylesheet" media="screen">
   <!--<link href="vendor/css/bootstrap-theme.css" rel="stylesheet media="screen"">-->
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
