--- a/samples/framework7-interface-sample/index.html
+++ b/samples/framework7-interface-sample/index.html
@@ -24,7 +24,7 @@
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
   <!--<script src="vendor/js/bootstrap.min.js"></script>-->
   <!--<script src="vendor/js/holder.js"></script>-->
-  <!--<script src="vendor/js/markdown.js"></script>-->
+  <script src="vendor/js/markdown.js"></script>
   <!--<script src="vendor/js/switchery.js"></script>-->
   <!--<script src="vendor/js/bootstrap-datepicker.min.js"></script>-->
   <script src="vendor/js/bowser.min.js"></script>
