fix coverage reporting

--- a/samples/framework7-interface-sample/index.html
+++ b/samples/framework7-interface-sample/index.html
@@ -22,22 +22,14 @@
 <div id="scripts">
   <script src="vendor/js/framework7.js"></script>
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
-  <!--<script src="vendor/js/bootstrap.min.js"></script>-->
-  <!--<script src="vendor/js/holder.js"></script>-->
   <script src="vendor/js/markdown.js"></script>
-  <!--<script src="vendor/js/switchery.js"></script>-->
-  <!--<script src="vendor/js/bootstrap-datepicker.min.js"></script>-->
   <script src="vendor/js/bowser.min.js"></script>
   <script src="../../dist/tequila.js"></script>
   <script src="../../lib/interfaces/framework7-interface-client.js"></script>
   <script src="../../lib/interfaces/framework7-interface-navbar.js"></script>
   <script src="../../lib/interfaces/framework7-interface-page.js"></script>
+  <script src="../../lib/interfaces/framework7-interface-presentation.js"></script>
   <script src="../../lib/interfaces/framework7-interface-toolbar.js"></script>
-  <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-panel.js"></script>-->
-  <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-navbar.js"></script>-->
-  <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-appbar.js"></script>-->
-  <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-stub-panel.js"></script>-->
-  <!--<script src="../../lib/interfaces/bootstrap3-panels-interface-presentation-panel.js"></script>-->
   <script src="app.js"></script>
 </div>
 </html>
