--- a/samples/framework7-interface-sample/scratchpad.html
+++ b/samples/framework7-interface-sample/scratchpad.html
@@ -115,13 +115,7 @@
         <div class="item-media"><i class="icon icon-form-toggle"></i></div>
         <div class="item-inner">
           <div class="item-title label">Switch</div>
-          <div class="item-input">
-            <label class="label-switch">
-              <input type="checkbox"/>
-
-              <div class="checkbox"></div>
-            </label>
-          </div>
+          <div class="item-input"><label class="label-switch"><input type="checkbox"/><div class="checkbox"></div></label></div>
         </div>
       </div>
     </li>
