added logo to f7 sample

--- a/samples/framework7-interface-sample/index.html
+++ b/samples/framework7-interface-sample/index.html
@@ -10,6 +10,22 @@
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="vendor/css/framework7.css">
   <link href="../../dist/framework7-interface.css" rel="stylesheet" media="screen">
+  <!-- Favicon-->
+  <link href="img/icon-57.png" rel="shortcut icon">
+  <!-- iOS 7 iPad (retina) -->
+  <link href="img/icon-152.png" sizes="152x152" rel="apple-touch-icon">
+  <!-- iOS 6 iPad (retina) -->
+  <link href="img/icon-144.png" sizes="144x144" rel="apple-touch-icon">
+  <!-- iOS 7 iPhone (retina) -->
+  <link href="img/icon-120.png" sizes="120x120" rel="apple-touch-icon">
+  <!-- iOS 6 iPhone (retina) -->
+  <link href="img/icon-114.png" sizes="114x114" rel="apple-touch-icon">
+  <!-- iOS 7 iPad -->
+  <link href="img/icon-76.png" sizes="76x76" rel="apple-touch-icon">
+  <!-- iOS 6 iPad -->
+  <link href="img/icon-72.png" sizes="72x72" rel="apple-touch-icon">
+  <!-- iOS 6 iPhone -->
+  <link href="img/icon-57.png" sizes="57x57" rel="apple-touch-icon">
 </head>
 <body>
 <div class="container" id="loadingPanel">
