--- a/samples/apollo-proto/index.html
+++ b/samples/apollo-proto/index.html
@@ -46,6 +46,7 @@
   <script src="../../lib/interfaces/framework7-interface-page.js"></script>
   <script src="../../lib/interfaces/framework7-interface-presentation.js"></script>
   <script src="../../lib/interfaces/framework7-interface-toolbar.js"></script>
+  <script src="data.js"></script>
   <script src="models.js"></script>
   <script src="app.js"></script>
 </div>
