--- a/samples/apollo-proto/index.html
+++ b/samples/apollo-proto/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link href="vendor/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="vendor/css/framework7.css">
-  <link href="../../dist/framework7-interface.css" rel="stylesheet" media="screen">
+  <link href="vendor/css/framework7-interface.css" rel="stylesheet" media="screen">
   <!-- Favicon-->
   <link href="img/icon-57.png" rel="shortcut icon">
   <!-- iOS 7 iPad (retina) -->
@@ -40,12 +40,8 @@
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
   <script src="vendor/js/markdown.js"></script>
   <script src="vendor/js/bowser.min.js"></script>
-  <script src="../../dist/tequila.js"></script>
-  <script src="../../lib/interfaces/framework7-interface-client.js"></script>
-  <script src="../../lib/interfaces/framework7-interface-navbar.js"></script>
-  <script src="../../lib/interfaces/framework7-interface-page.js"></script>
-  <script src="../../lib/interfaces/framework7-interface-presentation.js"></script>
-  <script src="../../lib/interfaces/framework7-interface-toolbar.js"></script>
+  <script src="vendor/js/tequila.js"></script>
+  <script src="vendor/js/tequila-interface-f7.js"></script>
   <script src="data.js"></script>
   <script src="models.js"></script>
   <script src="app.js"></script>
