--- a/samples/unified-interface-sample/index-bp3.html
+++ b/samples/unified-interface-sample/index-bp3.html
@@ -40,7 +40,7 @@
   <script src="../../lib/interfaces/bootstrap3-panels-interface-appbar.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-stub-panel.js"></script>
   <script src="../../lib/interfaces/bootstrap3-panels-interface-presentation-panel.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app1.js"></script>
 </div>
 </body>
 </html>
