--- a/samples/unified-interface-sample/index-f7.html
+++ b/samples/unified-interface-sample/index-f7.html
@@ -37,6 +37,7 @@
 </div>
 </body>
 <div id="scripts">
+  <script src="vendor/js/stacktrace.js"></script>
   <script src="vendor/js/framework7.js"></script>
   <script src="vendor/js/jquery-2.0.3.min.js"></script>
   <script src="vendor/js/markdown.js"></script>
@@ -47,6 +48,6 @@
   <script src="../../lib/interfaces/framework7-interface-page.js"></script>
   <script src="../../lib/interfaces/framework7-interface-presentation.js"></script>
   <script src="../../lib/interfaces/framework7-interface-toolbar.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app1.js"></script>
 </div>
 </html>
